src/App.css
.App {
  border: border-box;
  font-family: 'Lato', sans-serif;
}

main {
  text-align: center;
}

.color-nav {
  background-color: black;
}

.navColor{
  margin: 5px;
  font-family: "Lato";
  font-size: 16px;
  color: white;
}

.navColor:visited{
  color: white;
}


.title {
  font-family: 'Slabo 13px', serif;
}

/* Home Component Styling Start */

.home {
  background-image: url("https://res.cloudinary.com/dxqwpud0l/image/upload/v1638075984/background_iayjyx.png");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  /* min-width: 1600px; */
  
}

.homeContainer {
  text-align: left;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80vw;
  height: 80vh;
  margin: 0 auto;
}

#myPic {
  width: 180px;
  height: 240px;
  border-radius: 50%;
  margin: 10px;
  border: 2px solid white;
}

.name {
  font-family: 'Slabo 13px', serif;
  color: black;
}

.main {
  width: 500px; 
  margin: 5px; 
}

.intro {
  font-size: 20px;
}

.name {
  font-size: 20px;
}

.description {
  font-size: 25px;
  width: 150px;
}

.aboutMe {
  font-size: 14px;
  width: 180px;
}

.separator {
  border: 1px solid rgb(255, 255, 255);
  width: 160px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.socialsHome {
  margin-top: 10px;
  width: 180px;
}

/* Home Component Styling End */

/* About Component Styling Start */

.aboutContainer{
  min-height: 50vh;
  display: flex;
}

.about {
  justify-content: center;
  align-items: center;
}

.title {
  text-align: center;
  margin-top: 20px;
}

.sectionSeparator {
  border: 1px solid rgb(2, 2, 2);
  width: 160px;
  margin-top: 20px;
  margin-bottom: 20px;
  margin: 0 auto;
}


.aboutMain {
  text-align: left;
  justify-content: center;
  margin: 10px;
  padding: 30px;
  /* height: 35vh;
  width: 700px;
  margin: 10px; */
}

.paragraph {
  margin: 20px;
}

.pawIcon {
  color: lightpink;
}

.plantIcon {
  color: green;
}

/* About Component Styling End */

/* Skills Component Styling Start */

.skillsContainer{
  display: text-align;
  min-height: 30vh;
  
}

.skillsDescription {
  margin: 20px;
}

.skillsList{
  margin: 30px;
  display: flex;
  flex-wrap: wrap;
}

.skillsIcons {
  text-align: center;
  margin: 10px;
  border: 1px solid black;
  border-radius: 50px;
  box-shadow: 10px 5px 5px gray;
  display: flex;
  width: 140px;
  padding: 10px;
  margin: 0 auto;
}

.fab {
  font-size: 40px;
}

.fa-html5 {
  color: #E76027;
}

.fa-css3-alt {
  color: #38AAD7
}

.fa-js-square {
  color: #EDD51D
}

.fa-react {
  color: #5AD0EF;
}

.fa-node-js {
  color: #7EC427;
}

/* Skills Component Styling End */

/* Portfolio Component Styling Start */

.portfolioTitle {
  text-align: center;
}

.portfolioContainer {
  justify-content: center;
  min-height: 60vh;
  display: flex;
  flex-wrap: wrap;
}

.petBuddies{
  margin: 30px;
}

.projectTitle{
  text-align: center;
}

.projectDescription {
  width: 350px;
  margin: 10px;
  padding: 10px;
  margin: 0 auto;
}

.projectPic {
  width: 300px;
  height: 300px;
  margin: 0 auto;
  display: flex;
}

.projectPic:hover {
  width: 295px;
  height: 295px;
  transition: all 0.3s ease-in-out;
}

.projectButtons {
  display: flex;
  justify-content: center;
  margin: 10px;
}

.linkButton {
  background: white;
  border: 1px solid lavender;
}

.linkButton:hover {
  background: lavender;
  transition: all 0.5s ease-in-out;
}

a {
  text-decoration: none;
}

/* Portfolio Component Styling End */

/* Contact Component Styling Start */

.contactContainer{
  text-align: left;
  display: flex;
  justify-content: center;
  width: 80vw;
  padding: 10px;
  margin-bottom: 80px;
  margin: 0 auto;
}

.contact {
  padding: 20px;
}

.contactDescription {
  width: 300px;
  margin: 10px;
}

.contactName {
  margin: 5px;
  width: 300px;
}

.contactEmail {
  margin: 5px;
  width: 300px;
}

.contactMessage {
  margin: 5px;
  width: 300px;
  height: 400px;
}

.submitButton {
  background: white;
  border: 1px solid lavender;
  margin-left: 120px
}

.submitButton:hover {
  background: lavender;
  transition: all 0.5s ease-in-out;
}

/* Contact Component Styling End */

/* Footer Component Styling Start */

.footer {
  background: lightgray;
  position: static;
  bottom: 0;
  width: 100%;
}

.socials {
  display: inline;
  margin: 10px;
}

.fa-linkedin {
  color: #0A66C2;
}

.fa-linkedin:hover {
  font-size: 35px;
  transition: all 0.5s ease-in-out;
}

.fa-github {
  color: #000000;
}

.fa-github:hover {
  font-size: 35px;
  transition: all 0.5s ease-in-out;
}

.fa-twitter-square {
  color: #4DA6EA;
}

.fa-twitter-square:hover {
  font-size: 35px;
  transition: all 0.5s ease-in-out;
}

.fa-python{
  color: #3276AE;
}

/* Footer Component Styling End */

/*Tablet view */
@media only screen and (min-width: 678px){

  .navColor{
    font-size: 20px;
  }

  #myPic {
    width: 400px;
    height: 450px;
    border-radius: 50%;
    margin: 5px;
  }
  
  .intro {
    font-size: 40px;
  }

  .name {
    font-size: 60px;
    width: 600px;
  }

  .socialsHome {
    width: 300px;
  }

  .home-icon {
    font-size: 70px;
  }

  .home-icon:hover{
    font-size: 60px;
  }

  .separator {
    width: 460px;
  }

  .description {
    font-size: 50px;
  }

  .aboutMe {
    font-size: 30px;
    width: 600px;
  }

  .paragraph {
    font-size: 20px;
  }

  .skillsDescription {
    font-size: 20px;
  }
  
  .portfolioContainer {
    display: flex;
  }

  .projectDescription {
    font-size: 20px;
  }

  .petBuddiesPic {
    width: 400px;
    height: 400px;
  }

  .petBuddiesPic:hover {
    width: 380px;
    height: 380px;
  }

  .contactDescription {
    font-size: 20px;
  }

};

/*Desktop view */
@media only screen and (min-width: 992px){

  .intro {
    font-size: 50px;
  }

  .name {
    font-size: 70px;
  }

  .description {
    font-size: 60px;
  }

  .aboutMe {
    font-size: 25px;
  }

};

